# rust_ai_trading

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ai_agent/: mod.rs
src/ai_agent/agents/: mod.rs  portfolio_manager.rs  risk_manager.rs  warren_buffet.rs
src/ai_agent/data/: cache.rs  data.rs  mod.rs  models.rs
src/ai_agent/graph/: graph.rs  mod.rs  state.rs
src/ai_agent/llm/: groq.rs  mod.rs  model_provider.rs  models.rs
src/ai_agent/tools/: api.rs
src/ai_agent/utils/: analysts.rs  mod.rs
src/app/: config.rs  factory.rs  mod.rs
src/app/controller/: agent_controllers.rs  mod.rs
src/app/routes/: routes.rs
src/app/services/: agent_service.rs  mod.rs  service.rs
