#Cargo.toml
[package]
name = "AI_Hedgefund"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
# Async runtime
tokio = { version = "1.28", features = ["full"] }
# JSON utils
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
anyhow = "1.0.98"
serde_json = "1.0.44"
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"
dotenv = "0.15"
async-trait = "0.1"
env_logger = "0.10" # Or the latest version
polars = { version = "0.40.0", features = ["lazy", "serde", "dtype-datetime"] }
arrow2 = "0.18.0"
once_cell = "1.18.0"
futures = "0.3.31"
